# tactilesensors4

./: CMakeLists.txt  package.xml
scripts/: SensorDouble.py
src/: Communication.cpp  Communication.h  Finger.cpp  Finger.h  PollData4.cpp
